<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mealzy.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_home_to_ingredients"
            app:destination="@id/navigation_ingredients"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_home_to_recipes"
            app:destination="@id/navigation_recipes"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_home_to_meal_plan"
            app:destination="@id/navigation_meal_plan"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_recipes"
        android:name="com.example.mealzy.ui.recipes.RecipesFragment"
        android:label="@string/title_recipes"
        tools:layout="@layout/fragment_recipes" />

    <fragment
        android:id="@+id/navigation_ingredients"
        android:name="com.example.mealzy.ui.ingredients.IngredientsFragment"
        android:label="@string/title_ingredients"
        tools:layout="@layout/fragment_ingredients">

        <argument
            android:name="showAddDialog"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>

    <fragment
        android:id="@+id/navigation_meal_plan"
        android:name="com.example.mealzy.ui.mealplan.MealPlanFragment"
        android:label="@string/title_meal_plan"
        tools:layout="@layout/fragment_meal_plan" />

</navigation>